--- a/style.css
+++ b/style.css
@@ -372,8 +372,8 @@ section .title::after{
 .skills-content .right .js::before{
     width: 80%;
 }
-.skills-content .right .php::before{
-    width: 50%;
+.skills-content .right .PostgreSQL::before{
+    width: 70%;
 }
 .skills-content .right .mysql::before{
     width: 70%;
