--- a/style.css
+++ b/style.css
@@ -175,11 +175,11 @@ section .title::after{
     background-color: #111;
 }
 .home .max-width{
-  width: 100%;
-  display: flex;
+    width: 100%;
+    display: flex;
 }
 .home .max-width .row{
-  margin-right: 0;
+    margin-right: 0;
 }
 .home .home-content .text-1{
     font-size: 27px;
@@ -378,6 +378,14 @@ section .title::after{
 .skills-content .right .mysql::before{
     width: 70%;
 }
+.open_source{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+
+}
 
 /* contact section styling */
 .contact .title::after{
@@ -448,29 +456,29 @@ section .title::after{
     border-color: #b3b3b3;
 }
 .contact .right form .textarea textarea{
-  padding-top: 10px;
-  resize: none;
+    padding-top: 10px;
+    resize: none;
 }
 .contact .right form .button-area{
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 .right form .button-area button{
-  color: #fff;
-  display: block;
-  width: 160px!important;
-  height: 45px;
-  outline: none;
-  font-size: 18px;
-  font-weight: 500;
-  border-radius: 6px;
-  cursor: pointer;
-  flex-wrap: nowrap;
-  background: rgb(20, 30, 220);
-  border: 2px solid rgb(20, 30, 220);
-  transition: all 0.3s ease;
+    color: #fff;
+    display: block;
+    width: 160px!important;
+    height: 45px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    flex-wrap: nowrap;
+    background: rgb(20, 30, 220);
+    border: 2px solid rgb(20, 30, 220);
+    transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: rgb(20, 30, 220);
-  background: none;
+    color: rgb(20, 30, 220);
+    background: none;
 }
